Update news ticker.

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
       <div class="ticker-wrap">
         <div class="ticker-move ticker-animation">
           <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
+          <div class="ticker-item"><div class="ticker-content">Workshop: <a target="_blank" href="https://concordiauniversity.libcal.com/event/3682837">Sep 19, 2:00pm - 4:00pm ET @ Concordia Library</a><br><i>3D Modelling 102: OpenSCAD</i></div></div>
           <div class="ticker-item"><div class="ticker-content">Models @ MakeWithTech:<br><a target="_blank" href="https://makewithtech.com/creators-you-deserve-to-get-paid/">Creators. You Deserve to Get Paid.</a></div></div>
           <div class="ticker-item"><div class="ticker-content">New Book (in Spanish): <a href="documentation-books.html#un-reloj-de-sol-digital">Un reloj de Sol digital</a><br><i>Get the source and free PDFs from <a target="_blank" href="https://github.com/lopezsolerluis/reloj-de-sol-libro/">github</a></i></div></div>
           <div class="ticker-item"><div class="ticker-content">New Book (coming soon): <a href="documentation-books.html#make-calculus">Make: Calculus</a><br><i>Build models to learn, visualize and explore</i></div></div>
-          <div class="ticker-item"><div class="ticker-content">New Book: <a href="documentation-books.html#simplifying-3d-printing">Simplifying 3D Printing with OpenSCAD</a></div></div>
           <div class="ticker-item"><div class="ticker-content">Google Summer of Code Project: <a href="news.html#20220525"><br>3D Viewport Graphical Enhancements</a></div></div>
           <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
         </div>
