Update "Constructive Library" description.

--- a/libraries.html
+++ b/libraries.html
@@ -165,7 +165,11 @@
 
       <img class="libimg" src="https://raw.githubusercontent.com/solidboredom/constructive/main/img/mount.gif" width="200" align="right">
       <h2 id="constructive">Constructive Library</h2>
-      <p>Easily create holes from modules and overcome many Openscad's limitiations for complex models using the library's own syntax.</p>
+      <p>
+        Extends OpenScad Language for complex and complementary mechanical parts with less mathematical
+        code. Offers a "Stamping" approach to quickly create mechanical parts fitting and complementing
+        one another. This is used as a replacement for Constraints known form other CAD systems.
+      </p>
       <ul>
         <li><a href="https://github.com/solidboredom/constructive">Library</a></li>
         <li><a href="https://github.com/solidboredom/constructive/blob/main/README.md">Documentation</a></li>
