Added Pathbuilder to single topic list

--- a/libraries.html
+++ b/libraries.html
@@ -336,6 +336,17 @@
         <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
       </ul>
       <p style="clear: both"></p>
+
+      <img class="libimg" src="images/pathbuilder.gif" width="200" align="right">
+      <h2 id="pathbuilder">Pathbuilder</h2>
+      <p>A fast way to create complex 2D shapes with fillets and chamfers using SVG syntax. Supports the full SVG syntax.</p>
+      <ul>
+        <li><a href="https://github.com/dinther/pathbuilder">Library</a></li>
+        <li><a href="https://github.com/dinther/pathbuilder/blob/main/README.md">Documentation</a></li>
+        <li><a href="https://github.com/dinther/pathbuilder/wiki">Wiki</a></li>
+        <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
+      </ul>
+      <p style="clear: both"></p>      
     </section>
 
   </article>
