Added the missing libraries to sidebar menu

--- a/libraries.html
+++ b/libraries.html
@@ -94,6 +94,8 @@
         <li>&centerdot;&nbsp;<a href="#Tray">Tray Library</a></li>
         <li>&centerdot;&nbsp;<a href="#YAPP">YAPP Generator</a></li>
         <li>&centerdot;&nbsp;<a href="#STEMFIE">STEMFIE Parts Library</a></li>
+        <li>&centerdot;&nbsp;<a href="#catchnhole">Catch'n'Hole</a></li>
+        <li>&centerdot;&nbsp;<a href="#pathbuilder">Pathbuilder</a></li>
       </ul>
     </ul>
   </div>
