--- a/community.html
+++ b/community.html
@@ -115,7 +115,7 @@
 			</ul>
 			<h2>Programmers</h2>
 			<ul>
-				<li>Fix <a href="https://github.com/openscad/openscad/issues">bugs</a> - good ones to get started are tagged <a href="https://github.com/openscad/openscad/labels/Tag%3A%20Low%20Hanging">Low Hanging</a></li>
+				<li>Fix <a href="https://github.com/openscad/openscad/issues">bugs</a> - good ones to get started are tagged <a href="https://github.com/openscad/openscad/labels/Tag%3A%20Good%20First%20Issue">Good First Issue</a></li>
 				<li>Write (better) <a href="https://github.com/openscad/openscad/blob/master/doc/testing.txt">tests</a></li>
 				<li>Implement <a href="https://github.com/openscad/openscad/labels/Type%3A%20Enhancement">new features</a></li>
 				<li>Refactor or clean up code</li>
