Add advent calendars to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -82,6 +82,12 @@
 <!--			<li><a href="#user-manual">Code Examples</a></li>-->
 			<li><a href="#gallery">OpenSCAD Gallery</a></li>
 		</ul>
+		<h1>#SCADvent</h1>
+		<ul>
+			<li><a href="https://openscad.org/advent-calendar-2019">2019 OpenSCAD Advent Calendar</a></li>
+			<li><a href="https://openscad.org/advent-calendar-2020">2020 OpenSCAD Advent Calendar</a></li>
+			<li><a href="https://openscad.org/advent-calendar-2021">2021 OpenSCAD Advent Calendar</a></li>
+		</ul>
 	</div>
 	
 	<article>
