--- a/documentation-books.html
+++ b/documentation-books.html
@@ -647,8 +647,8 @@
 		  Creative Commons Atribución-CompartirIgual 4.0 Internacional</a>.</li>
         </ul>
         </div>
-        <p>Edición para imprimir: <a href="https://github.com/lopezsolerluis/reloj-de-sol-libro/blob/main/pdfs-para-descargar/reloj-de-sol-libro.pdf">reloj-de-sol-libro.pdf</a></p>
-        <p>Edición para pantallas: <a href="https://github.com/lopezsolerluis/reloj-de-sol-libro/blob/main/pdfs-para-descargar/reloj-de-sol-pantalla.pdf">reloj-de-sol-pantalla.pdf</a></p>
+        <p>Edición para imprimir: <a href="https://lopezsolerluis.github.io/reloj-de-sol-libro/pdfs-para-descargar/reloj-de-sol-libro.pdf">reloj-de-sol-libro.pdf</a></p>
+        <p>Edición para pantallas: <a href="https://lopezsolerluis.github.io/reloj-de-sol-libro/pdfs-para-descargar/reloj-de-sol-pantalla.pdf">reloj-de-sol-pantalla.pdf</a></p>
         <p>Repositorio GitHub: <a href="https://github.com/lopezsolerluis/reloj-de-sol-libro/"><span class="fab fa-github"></span> lopezsolerluis/reloj-de-sol-libro</a></p>
       </p>
       <p style="clear: both"><br></p>
