--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/regular.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/solid.min.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/brands.min.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
@@ -108,6 +109,12 @@
 <div id="page-content">
 	
 	<div id="sidebar">
+    <div style="padding-bottom: 0.5rem;">
+    <a href="https://github.com/openscad/openscad/" title="GitHub"><i class="fab fa-github"></i></a> &nbsp;
+    <a href="http://twitter.com/openscad" title="Twitter"><i class="fab fa-twitter"></i></a> &nbsp;
+    <a href="https://fosstodon.org/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a> &nbsp;&nbsp;
+    <a href="https://web.libera.chat/?channel=#openscad" title="IRC"><i style="font-size: x-large;" class="fas fa-comment"></i></a>
+    </div>
 		<h1>Recent News</h1>
 		<ul>
 		</ul>
