--- a/community.html
+++ b/community.html
@@ -6,6 +6,7 @@
 	<title>OpenSCAD - Community</title>
 
 	<link href="assets/css/style.css" rel="stylesheet">
+	<link href="assets/fontawesome/css/solid.min.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/brands.min.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 	<link href="assets/fonts/open-sans/all.css" rel="stylesheet">
@@ -78,7 +79,10 @@
 <li><a href="#forum">Forum / Mailing List</a></li>
 <li><a href="#irc">IRC Channel</a></li>
 <li><a href="#other">Other</a></li>
-<li><a href="http://twitter.com/openscad"><i class="fab fa-twitter"></i></a></li>
+<li><a href="https://github.com/openscad/openscad/" title="GitHub"><i class="fab fa-github"></i></a> &nbsp;
+    <a href="http://twitter.com/openscad" title="Twitter"><i class="fab fa-twitter"></i></a> &nbsp;
+    <a href="https://fosstodon.org/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a> &nbsp;&nbsp;
+    <a href="https://web.libera.chat/?channel=#openscad" title="IRC"><i style="font-size: x-large;" class="fas fa-comment"></i></a></li>
 		</ul>
 	</div>
 	
