Update banner to snow mode and link to Advent Calendar.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link href="assets/fontawesome/css/brands.min.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
+	<script src="advent-calendar-2022/snow.js"></script>
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 	<script src="assets/js/modernizr-1.7.min.js"></script>
 
@@ -121,16 +122,16 @@
 	</div>
 	
   <article>
-    <section-area style="width: 100%; text-align: center; background-color: #e5f1d3; border: 1px solid #f9d72c;">
+    <section-area id="snow" class="snow">
       <div class="ticker-wrap">
         <div class="ticker-move ticker-animation">
-          <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
+          <div class="ticker-item"><div class="ticker-content"><big><a href="/advent-calendar-2022">OpenSCAD Advent Calendar 2022</a></big></div></div>
           <div class="ticker-item"><div class="ticker-content">Models @ MakeWithTech:<br><a target="_blank" href="https://makewithtech.com/creators-you-deserve-to-get-paid/">Creators. You Deserve to Get Paid.</a></div></div>
           <div class="ticker-item"><div class="ticker-content">New Book (in Spanish): <a href="documentation-books.html#un-reloj-de-sol-digital">Un reloj de Sol digital</a><br><i>Get the source and free PDFs from <a target="_blank" href="https://github.com/lopezsolerluis/reloj-de-sol-libro/">github</a></i></div></div>
-          <div class="ticker-item"><div class="ticker-content">New Book (coming soon): <a href="documentation-books.html#make-calculus">Make: Calculus</a><br><i>Build models to learn, visualize and explore</i></div></div>
+          <div class="ticker-item"><div class="ticker-content">New Book: <a href="documentation-books.html#make-calculus">Make: Calculus</a><br><i>Build models to learn, visualize and explore</i></div></div>
           <div class="ticker-item"><div class="ticker-content">New Book: <a href="documentation-books.html#simplifying-3d-printing">Simplifying 3D Printing with OpenSCAD</a></div></div>
-          <div class="ticker-item"><div class="ticker-content">Google Summer of Code Project: <a href="news.html#20220525"><br>3D Viewport Graphical Enhancements</a></div></div>
           <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
+          <div class="ticker-item"><div class="ticker-content"><big><a href="/advent-calendar-2022">OpenSCAD Advent Calendar 2022</a></big></div></div>
         </div>
       </div>
     </section-area>
