News about Mastodon account.

--- a/community.html
+++ b/community.html
@@ -78,6 +78,7 @@
 <li><a href="#get-involved">Get Involved</a></li>
 <li><a href="#forum">Forum / Mailing List</a></li>
 <li><a href="#irc">IRC Channel</a></li>
+<li><a href="#social-media">Social Media</a></li>
 <li><a href="#other">Other</a></li>
 <li><a href="https://github.com/openscad/openscad/" title="GitHub"><i class="fab fa-github"></i></a> &nbsp;
     <a href="http://twitter.com/openscad" title="Twitter"><i class="fab fa-twitter"></i></a> &nbsp;
@@ -157,7 +158,15 @@
         <li>The chat room is also available via <a href="https://matrix.org/">Matrix</a> as <a href="https://matrix.to/#/#openscad:libera.chat">#openscad:libera.chat</a></li>
         <li>Additional documentation on how to connect can be found at <a href="https://libera.chat/guides">https://libera.chat/guides</a></li>
       </ul>
-  </section>
+    </section>
+
+    <section id="social-media">
+      <h1>Social Media</h1>
+      <ul>
+        <li>Mastodon: <a href="https://fosstodon.org/@OpenSCAD">@OpenSCAD@fosstodon.org</a></li>
+        <li>Twitter: <a href="https://twitter.com/openscad">openscad</a></li>
+      </ul>
+    </section>
 		
 		<section id="other">
 			<h1>Other</h1>
