--- a/news.html
+++ b/news.html
@@ -86,7 +86,7 @@
         strange directions with surprising similarities to the freenode desaster like
         <a href="https://help.twitter.com/en/rules-and-policies/social-platforms-policy">banning
         links to other social media sites</a> we have removed the freshly added link to
-        <a href="https://fosstodon.org/@OpenSCAD">Mastodon</a> from the bio again.
+        <a href="https://fosstodon.org/@OpenSCAD">Mastodon</a> from the Twitter bio again.
       </p>
       <p>
         So here are the links to the 2 offical accounts that are currently active:
