--- a/news.html
+++ b/news.html
@@ -83,7 +83,7 @@
         <img class="newsimg" src="images/mastodon-logo-purple.svg" width="60" height="60" title="Logo (c) Mastodon AGPL-3.0"/>
         While the OpenSCAD account on Twitter is not the most active one, it still was a nice
         place to see what people are designing and sharing. But with Twitter now moving into
-        strange directions with surprising similarities to the freenode desaster like
+        strange directions with surprising similarities to the freenode disaster like
         <a href="https://help.twitter.com/en/rules-and-policies/social-platforms-policy">banning
         links to other social media sites</a> we have removed the freshly added link to
         <a href="https://fosstodon.org/@OpenSCAD">Mastodon</a> from the Twitter bio again.
