Update license info with exception notice.

--- a/advent-calendar-2022/index.html
+++ b/advent-calendar-2022/index.html
@@ -560,7 +560,7 @@ a.link:hover {
 <span class="sep">||</span>
 <a class="link" href="https://en.wikibooks.org/wiki/OpenSCAD_Tutorial">OpenSCAD Tutorial</a>
 <span class="sep">||</span>
-All scripts are licensed <a class="link" href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0</a>
+All scripts except door 22 are licensed <a class="link" href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0</a>
 <span class="sep">||</span>
 Doors open midnight UTC
 <span class="sep">||</span>
