Use self hosted fonts for previous Advent Calendars.

--- a/advent-calendar-2019/index.html
+++ b/advent-calendar-2019/index.html
@@ -9,11 +9,10 @@
       -->
     <meta charset="utf-8" />
     <meta http-equiv="Cache-Control" content="no-transform" />
-    <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
+    <link href="../assets/fonts/kalam/latin.css" rel="stylesheet">
     <link rel="stylesheet" href="snow.css">
     <title>OpenSCAD Advent Calendar 2019</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="jquery.min.js"></script>
     <script src="snow.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -145,7 +144,6 @@ label {
   text-align: center;
   background: white;
   border: solid 1px;
-  font-family: 'Fira Mono', monospace;
   font-size: 12px;
 }
 
