--- a/advent-calendar-2021/index.html
+++ b/advent-calendar-2021/index.html
@@ -22,11 +22,11 @@
     <meta property="og:image" content="https://openscad.org/advent-calendar-2021/card.png">
     <meta property="og:image:width" content="1400"/>
     <meta property="og:image:height" content="700"/>
-    <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
+    <link href="../assets/fonts/kalam/latin.css" rel="stylesheet">
     <link href="../assets/fonts/open-sans/all.css" rel="stylesheet">
     <link rel="stylesheet" href="snow.css">
     <title>OpenSCAD Advent Calendar 2021</title>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript" src="snow.js"></script>
     <script type="text/javascript" src="feather.min.js"></script>
 <script>
