Back to default ticker.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 	<link href="assets/fontawesome/css/brands.min.css" rel="stylesheet">
 	<link href="assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
 
-	<script src="advent-calendar-2022/snow.js"></script>
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 	<script src="assets/js/modernizr-1.7.min.js"></script>
 
@@ -35,11 +34,6 @@
 	<script src="inc/win_release_links.js"></script>
 	<script src="assets/js/home.js"></script>
 	<script src="assets/js/header.js"></script>
-  <script type="text/javascript">
-	  document.addEventListener('DOMContentLoaded', function() {
-	    new Snow('#snow', { number:12, r: 2.5, v: 1 });
-	  });
-	</script>
 <style>
 .header {
   background-color: #444;
@@ -102,7 +96,7 @@
 	<div id="sidebar">
     <div style="padding-bottom: 0.5rem;">
     <a href="https://github.com/openscad/openscad/" title="GitHub"><i class="fab fa-github"></i></a> &nbsp;
-    <a href="http://twitter.com/openscad" title="Twitter"><i class="fab fa-twitter"></i></a> &nbsp;
+    <a href="https://twitter.com/openscad" title="Twitter"><i class="fab fa-twitter"></i></a> &nbsp;
     <a href="https://fosstodon.org/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a> &nbsp;&nbsp;
     <a href="https://web.libera.chat/?channel=#openscad" title="IRC"><i style="font-size: x-large;" class="fas fa-comment"></i></a>
     </div>
@@ -112,16 +106,16 @@
 	</div>
 	
   <article>
-    <section-area id="snow" class="snow">
+    <section-area id="ticker">
       <div class="ticker-wrap">
         <div class="ticker-move ticker-animation">
-          <div class="ticker-item"><div class="ticker-content"><big><a href="/advent-calendar-2022">OpenSCAD Advent Calendar 2022</a></big></div></div>
+          <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
           <div class="ticker-item"><div class="ticker-content">Models @ MakeWithTech:<br><a target="_blank" href="https://makewithtech.com/creators-you-deserve-to-get-paid/">Creators. You Deserve to Get Paid.</a></div></div>
-          <div class="ticker-item"><div class="ticker-content">New Book (in Spanish): <a href="documentation-books.html#un-reloj-de-sol-digital">Un reloj de Sol digital</a><br><i>Get the source and free PDFs from <a target="_blank" href="https://github.com/lopezsolerluis/reloj-de-sol-libro/">github</a></i></div></div>
           <div class="ticker-item"><div class="ticker-content">New Book: <a href="documentation-books.html#make-calculus">Make: Calculus</a><br><i>Build models to learn, visualize and explore</i></div></div>
           <div class="ticker-item"><div class="ticker-content">New Book: <a href="documentation-books.html#simplifying-3d-printing">Simplifying 3D Printing with OpenSCAD</a></div></div>
+          <div class="ticker-item"><div class="ticker-content">OpenSCAD on social media: <a href="https://fosstodon.org/@OpenSCAD">Mastodon</a> | <a href="https://twitter.com/openscad">Twitter</a></div></div>
+          <div class="ticker-item"><div class="ticker-content">Share customizable designs: <a href="https://www.3dcustomizer.net/">3dcustomizer.net</a></div></div>
           <div class="ticker-item"><div class="ticker-content">OpenSCAD Chat: <a target="_blank" href="https://web.libera.chat/?channel=#openscad">#openscad</a> (on IRC network <a target="_blank" href="https://libera.chat/">libera.chat</a>)</div></div>
-          <div class="ticker-item"><div class="ticker-content"><big><a href="/advent-calendar-2022">OpenSCAD Advent Calendar 2022</a></big></div></div>
         </div>
       </div>
     </section-area>
