Update calendar links; Open all doors.

--- a/advent-calendar-2019/index.html
+++ b/advent-calendar-2019/index.html
@@ -282,11 +282,13 @@ All scripts are licensed <a class="footer" href="https://creativecommons.org/pub
 <span class="sep">||</span>
 <br>
 <span class="sep">-</span>
-<a class="link" href="https://openscad.org/advent-calendar-2019/">2019</a>
+<a class="footer" href="https://openscad.org/advent-calendar-2019/">2019</a>
 <span class="sep">-</span>
-<a class="link" href="https://openscad.org/advent-calendar-2020/">2020</a>
+<a class="footer" href="https://openscad.org/advent-calendar-2020/">2020</a>
 <span class="sep">-</span>
-<a class="link" href="https://openscad.org/advent-calendar-2021/">2021</a>
+<a class="footer" href="https://openscad.org/advent-calendar-2021/">2021</a>
+<span class="sep">-</span>
+<a class="footer" href="https://openscad.org/advent-calendar-2022/">2022</a>
 <span class="sep">-</span>
 </div>
 </body>
