--- a/advent-calendar-2020/index.html
+++ b/advent-calendar-2020/index.html
@@ -333,6 +333,8 @@ All scripts are licensed <a class="link" href="https://creativecommons.org/publi
 <span class="sep">-</span>
 <a class="link" href="https://openscad.org/advent-calendar-2021/">2021</a>
 <span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2022/">2022</a>
+<span class="sep">-</span>
 </div>
 </body>
 </html>
