Add 2022 OpenSCAD Advent Calendar to gallery page.

--- a/gallery.html
+++ b/gallery.html
@@ -73,6 +73,7 @@
 			<li><a href="https://openscad.org/advent-calendar-2019">2019 OpenSCAD Advent Calendar</a></li>
 			<li><a href="https://openscad.org/advent-calendar-2020">2020 OpenSCAD Advent Calendar</a></li>
 			<li><a href="https://openscad.org/advent-calendar-2021">2021 OpenSCAD Advent Calendar</a></li>
+			<li><a href="https://openscad.org/advent-calendar-2022">2022 OpenSCAD Advent Calendar</a></li>
 		</ul>
 	</div>
 	
