Add Altair's 2D Library.

--- a/libraries.html
+++ b/libraries.html
@@ -84,6 +84,7 @@
         <li>&centerdot;&nbsp;<a href="#STEMFIE">STEMFIE Parts Library</a></li>
         <li>&centerdot;&nbsp;<a href="#catchnhole">Catch'n'Hole</a></li>
         <li>&centerdot;&nbsp;<a href="#pathbuilder">Pathbuilder</a></li>
+        <li>&centerdot;&nbsp;<a href="#a2d">Altair's 2D Library</a></li>
       </ul>
     </ul>
   </div>
@@ -337,6 +338,16 @@
         <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
       </ul>
       <p style="clear: both"></p>      
+
+      <!-- <img class="libimg" src="images/a2d.gif" width="200" align="right"> -->
+      <h2 id="a2d">Altair's 2D Library for OpenSCAD</h2>
+      <p>A library of useful functions, modules and constants for 2D drawing in OpenSCAD.</p>
+      <ul>
+        <li><a href="https://github.com/ridercz/A2D">Library</a></li>
+        <li><a href="https://github.com/ridercz/A2D/wiki">Documentation</a></li>
+        <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
+      </ul>
+      <p style="clear: both"></p>
     </section>
 
   </article>
