Add book Géométrie dans l'espace et impression 3D.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -71,8 +71,9 @@
     <h1><a href="documentation-books.html">Books</a></h1>
     <ul>
       <li><a href="documentation-books.html#books-english">English</a></li>
-			<li><a href="documentation-books.html#books-german">German / Deutsch</a></li>
-	    <li><a href="documentation-books.html#books-spanish">Spanish / Español</a></li>
+      <li><a href="documentation-books.html#books-french">French / Français</a></li>
+      <li><a href="documentation-books.html#books-german">German / Deutsch</a></li>
+      <li><a href="documentation-books.html#books-spanish">Spanish / Español</a></li>
     </ul>
     <h1><a href="documentation-videos.html">Videos</a></h1>
     <ul>
@@ -488,6 +489,59 @@
         </ul>
         </div>
         <p>Order from <a href="https://www.amazon.com/OpenSCAD-3D-Printing-Al-Williams/dp/1500582476/">Amazon</a></p>
+      </p>
+      <p style="clear: both"><br></p>
+    </section>
+
+    <section id="books-french">
+      <h1>French / Français</h1>
+      <p style="clear: both"><br></p>
+      <p id="geometrie-dans-le-space-et-impression-3d">
+        <img class="libimg" width="200" src="images/GeometrieDansLeSpaceEtImpression3D.png" align="right">
+        <h2>Géométrie dans l'espace et impression 3D</h2>
+        <p>
+          Ce livre a pour but d’initier le lecteur à l’impression 3D par la modélisation
+          de solides géométriques remarquables. Vous apprendrez dans cet ouvrage à utiliser
+          les logiciels gratuits suivants
+        </p>
+        <ul>
+          <li>GeoGebra, logiciel de géométrie dynamique qui fonctionne à la souris et par saisie de commandes ;</li>
+          <li>OpenSCAD, logiciel de modélisation paramétrique qui utilise un langage de programmation simple ;</li>
+          <li>Cura, logiciel d’impression 3D utilisé par plus d’un million d’utilisateurs dans le monde.</li>
+        </ul>
+        <p>
+          Aucune connaissance préalable n’est nécessaire. Les chapitres s’enchaînent de
+          manière progressive et permettent d’utiliser de façon complémentaire GeoGebra et
+          OpenSCAD. Tout au long des trois parties de ce livre, le lecteur apprendra à utiliser
+          de façon experte ces logiciels.
+        </p>
+        <p>
+          Cet ouvrage offre une manière simple de réaliser un grand nombre de projets
+          d'impressions 3D. Il comprend de nombreux exercices et projets variés. Près d’une
+          centaine de solides géométriques sont présentés.
+        </p>
+        <p>
+          Comme pour les autres ouvrages de la collection Créations numériques, tous les
+          exercices sont corrigés en ligne et l’intégralité des ressources est téléchargeable.
+        </p>
+        <p>
+          Que vous soyez élève ou étudiant, enseignant, maker en FabLab, expert en fabrication
+          additive en entreprise ou simplement un lecteur curieux, ce livre vous plongera dans
+          la modélisation pour l’impression 3D, une technologie révolutionnaire à l’avenir très
+          prometteur.
+        </p>
+        <div class="book-data">
+        <ul>
+          <li>Auteur : Julien Jacquet</li>
+          <li>Éditeur : Ellipses
+            &nbsp <a href="https://www.editions-ellipses.fr/"><span class="fas fa-external-link-alt"></span></a>
+          </li>
+          <li>Sortie : mars 2023</li>
+          <li>ISBN : 978-2-34-007712-6</li>
+        </ul>
+        </div>
+        <p>Commander sur <a href="https://www.editions-ellipses.fr/accueil/14712-27294-geometrie-dans-l-espace-et-impression-3d-apprendre-a-utiliser-geogebra-3d-et-openscad-pour-imaginer-et-realiser-ses-propres-objets-9782340077126.html">le site de l'éditeur</a></p>
+        <p>Commander sur <a href="https://www.amazon.fr/G%C3%A9om%C3%A9trie-dans-lespace-impression-Apprendre/dp/2340077125/">Amazon</a></p>
       </p>
       <p style="clear: both"><br></p>
     </section>
