macOS snapshots now require minimum macOS 10.14, due to Manifold

--- a/downloads.html
+++ b/downloads.html
@@ -433,7 +433,7 @@
 			<div id="snapshots-osx" class="subsection">
 				<h2>macOS</h2>
 
-				<p>System requirements: macOS 10.13 "High Sierra" or newer, universal build supporting Intel and M1 systems.</p>
+				<p>System requirements: macOS 10.14 "Mojave" or newer, universal build supporting Intel and M1 systems.</p>
 
 				<div class="left, download-button">
 					<a id="MAC_SNAPSHOT_URL" href="https://files.openscad.org">
