--- a/downloads.html
+++ b/downloads.html
@@ -629,7 +629,12 @@
 				<pre>
 					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Debian_Unstable/ ./</code></small>
 				</pre>
-			
+
+				<h3>Raspbian 11 (64-bit only)</h3>
+				<pre>
+					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Raspbian_11/ ./</code></small>
+				</pre>
+
 				<h3>Ubuntu 18.04</h3>
 				<pre>
 					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_18.04/ ./</code></small>
