Update list of related projects, remove libre3d.com.
Removed as it seems down and just forwarding to printables.com.

--- a/about.html
+++ b/about.html
@@ -97,14 +97,14 @@
 
 			<p>A number of projects were inspired by OpenSCAD, or in some other way is related to OpenSCAD. This is an incomplete list of some project worth taking a look at:</p>
 				<ul>
-				  <li><a href="https://openjscad.xyz">OpenJSCAD</a></li>
-				  <li><a href="https://gilesbathgate.com/category/rapcad/">RapCAD</a></li>
-				  <li><a href="https://implicitcad.org">ImplicitCAD</a></li>
-				  <li><a href="https://libre3d.com">Libre 3D</a></li>
-				  <li><a href="https://www.blockscad3d.com/editor/">BlocksCAD</a></li>
-				  <li><a href="https://cadhub.xyz">CadHub</a></li>
-				  <li><a href="https://models.makewithtech.com/">Models @ MakeWithTech</a></li>
-				  <li><a href="https://openscad.cloud">openscad.cloud</a> by Autodrop3d</li>
+					<li><a href="https://www.3dcustomizer.net/">3dCustomizer.net</a></li>
+					<li><a href="https://models.makewithtech.com/">Models @ MakeWithTech</a></li>
+					<li><a href="https://openscad.cloud">openscad.cloud</a> by Autodrop3d</li>
+					<li><a href="https://cadhub.xyz">CadHub</a></li>
+					<li><a href="https://implicitcad.org">ImplicitCAD</a></li>
+					<li><a href="https://gilesbathgate.com/category/rapcad/">RapCAD</a></li>
+					<li><a href="https://openjscad.xyz">OpenJSCAD</a></li>
+					<li><a href="https://www.blockscad3d.com/editor/">BlocksCAD</a></li>
 				</ul>
 		</section>
 
