Update github links to BOSL2.

--- a/libraries.html
+++ b/libraries.html
@@ -106,9 +106,9 @@
       <h2 id="BOSL2">BOSL2 (beta)</h2>
       <p>Belfry OpenScad Library v2 - A library of tools, shapes, and helpers to make OpenScad easier to use.</p>
       <ul>
-        <li><a href="https://github.com/revarbat/BOSL2">Library</a></li>
-        <li><a href="https://github.com/revarbat/BOSL2/wiki">Documentation</a></li>
-        <li><a href="https://github.com/revarbat/BOSL2/wiki/Tutorials">Tutorials</a></li>
+        <li><a href="https://github.com/BelfrySCAD/BOSL2/">Library</a></li>
+        <li><a href="https://github.com/BelfrySCAD/BOSL2/wiki">Documentation</a></li>
+        <li><a href="https://github.com/BelfrySCAD/BOSL2/wiki/Tutorials">Tutorials</a></li>
         <li>License: <a href="https://spdx.org/licenses/BSD-2-Clause.html">BSD-2-Clause</a></li>
       </ul>
       <p style="clear: both"></p>
