Remove Debian 10, add Debian 12 and Ubuntu 23.04.

--- a/downloads.html
+++ b/downloads.html
@@ -623,14 +623,14 @@
 					<code>apt-transport-https</code> package. OBS also supports HTTP links, but it's recommended to use
 					<code>https</code> whenever possible.</p>
 			
-				<h3>Debian 10 (Buster)</h3>
-				<pre>
-					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Debian_10/ ./</code></small>
-				</pre>
-			
 				<h3>Debian 11 (Bullseye)</h3>
 				<pre>
 					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Debian_11/ ./</code></small>
+				</pre>
+			
+				<h3>Debian 12 (Bookworm)</h3>
+				<pre>
+					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Debian_12/ ./</code></small>
 				</pre>
 			
 				<h3>Debian Testing</h3>
@@ -666,6 +666,11 @@
 				<h3>Ubuntu 22.10 (x86_64, aarch64)</h3>
 				<pre>
 					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_22.10/ ./</code></small>
+				</pre>
+
+				<h3>Ubuntu 23.04 (x86_64, aarch64)</h3>
+				<pre>
+					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_23.04/ ./</code></small>
 				</pre>
 
 				<h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
