Add note about file server being down.

--- a/downloads.html
+++ b/downloads.html
@@ -51,12 +51,14 @@
 	    }
 	  });
 	</script>
+	<!--
 	<script type="text/javascript" src="https://files.openscad.org/snapshots/.snapshot_wasm.js"></script>
 	<script type="text/javascript" src="https://files.openscad.org/snapshots/.snapshot_macos.js"></script>
 	<script type="text/javascript" src="https://files.openscad.org/snapshots/.snapshot_win32.js"></script>
 	<script type="text/javascript" src="https://files.openscad.org/snapshots/.snapshot_win64.js"></script>
 	<script type="text/javascript" src="https://files.openscad.org/snapshots/.snapshot_linux_x86_64.js"></script>
 	<script type="text/javascript" src="https://files.openscad.org/snapshots/.snapshot_linux_aarch64.js"></script>
+	-->
 </head>
 <body>
 
@@ -117,6 +119,13 @@
 	</div>
 	
 	<article>
+		<section-area class="warning">
+			<div>
+				<p>Due to a problem (not security related) with the file server, downloads are currently not possible. Snap, Flatpak, Docker and the OBS builds are not affected.</p>
+				<p>We are working on a fix, but it might take a couple of days to get everything up and running again.</p>
+			</div>
+		</section-area>
+
 		<section id="osx">
 			<h1>macOS</h1>
 			<div class="subsection">
